TESTS_ENVIRONMENT = ../esjs
TESTS = 1.js 2.js 3.js 4.js 5.js 6.js 7.js 8.js 9.js 10.js \
	11.js 12.js 13.js 14.js 15.js 16.js 17.js 18.js 19.js 20.js \
	21.js 22.js 23.js 24.js 25.js 26.js 27.js 28.js 29.js 30.js \
	31.js 32.js 33.js 34.js 35.js 36.js 37.js 38.js 39.js 40.js \
	41.js 42.js 43.js 44.js 45.js 46.js 47.js 48.js 49.js 50.js \
	51.js 52.js 53.js 54.js 55.js 56.js 57.js 58.js 59.js 60.js \
	61.js 62.js 63.js 64.js       66.js 67.js 68.js 69.js 70.js \
	71.js 72.js 73.js 74.js 75.js 76.js 77.js 78.js 79.js 80.js \
	81.js 82.js \
	1000.js 1001.js 1002.js 1003.js 1004.js 1005.js 1006.js 1007.js \
	1008.js 1009.js 1010.js 1011.js 1012.js 1013.js 1014.js 1015.js \
	1016.js 1017.js 1018.js 1019.js 1020.js 1021.js 1022.js 1023.js \
	1024.js 1025.js 1026.js 1027.js 1028.js 1029.js 1030.js 1031.js \
	1032.js 1033.js 1034.js 1035.js 1036.js 1037.js 1038.js 1039.js \
	1040.js 1041.js 1042.js 1043.js 1044.js 1045.js 1046.js 1047.js \
	1048.js 1049.js 1050.js 1051.js 1052.js 1053.js 1054.js 1055.js \
	1056.js 1057.js 1058.js 1059.js 1060.js 1061.js 1062.js 1063.js \
	1064.js 1065.js 1066.js 1067.js 1068.js 1069.js 1070.js 1071.js \
	1072.js 1073.js 1074.js 1075.js 1076.js 1077.js \
	2000.js

EXTRA_DIST = $(TESTS) 65.js
